# rust-git-version

./: .gitmodules  COPYING  Cargo.toml  README.md  file  travis.yaml
.github/workflows/: rust.yml
git-version/: Cargo.toml  README.md
git-version-impl/: Cargo.toml
git-version-impl/src/: lib.rs
git-version-macro/: Cargo.toml
git-version-macro/src/: args.rs  describe_submodules.rs  lib.rs  utils.rs
git-version/src/: lib.rs
git-version/tests/: version.rs  version.rs~
src/: lib.rs
tests/: tests.rs  version.rs
