[package]
name = "git-version"
description = "Compile the git version (tag name, or hash otherwise) and dirty state into your program."
version = "0.3.0"
authors = ["Mara Bos <m-ou.se@m-ou.se>"]
license = "BSD-2-Clause"
repository = "https://github.com/m-ou-se/rust-git-version"
documentation = "https://docs.rs/git-version/"
keywords = ["git", "version", "build"]
categories = ["development-tools", "development-tools::build-utils"]
edition = "2018"

[dependencies]
proc-macro-hack = "0.5"
git-version-impl  = { version = "0.3.0", path = "../git-version-impl" }
git-version-macro = { version = "0.0.1", path = "../git-version-macro" }
